[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "ipykernel>=6.21.3",
    "jupyter>=1.0.0",
    "autopep8>=2.0.2",
    "pylint>=2.17.0",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Achilleas Voutsas", email = "avoutsas@gmail.com"},
]
dependencies = [
    "transformers>=4.26.1",
    "sentencepiece>=0.1.97",
    "gradio>=3.20.1",
    "torch>=1.13.1",
    "pandas>=1.5.3",
    "matplotlib>=3.7.1",
    "numpy>=1.24.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}
